# pong

./: .gitignore  CMakeLists.txt  README.md  main.cpp
backendsdl/include/: BackendContextSDL.h  BoxDrawablePrimitiveSDL.h  DrawablePrimitivesProviderSDL.h  EventManagerPrimitiveSDL.h  RectangularShapePrimitiveSDL.h  RendererBackendProvider.h  RendererPrimitiveSDL.h  WindowPrimitiveSDL.h
backendsdl/src/: BackendContextSDL.cpp  BoxDrawablePrimitiveSDL.cpp  CMakeLists.txt  DrawablePrimitivesFactory.cpp  EventManagerPrimitiveSDL.cpp  RectangularShapePrimitiveSDL.cpp  RendererBackendProvider.cpp  RendererPrimitiveSDL.cpp  WindowPrimitiveSDL.cpp
docs/: Doxyfile  testlists_notes.xopp
docs/doc_pages/: mainpage.md  page_one.md  subsubsystem1.md  subsystem1.md
docs/html/: _backend_context_interface_8h_source.html  _backend_context_s_d_l_8h_source.html  _ball_8h_source.html  _box_8h_source.html  _box_collider_component_8h_source.html  _box_drawable_primitive_s_d_l_8h_source.html  _collider_component_8h_source.html  _collider_component_manager_base_8h_source.html  _collider_tags_manager_8h_source.html  _collider_validator_8h_source.html  _collision_container_8h_source.html  _component_8h_source.html  _drawable_8h_source.html  _drawable_component_8h_source.html  _event_management_interface_8h_source.html  _event_manager_8h_source.html  _event_utils_8h_source.html  _events_8h_source.html  _game_8h_source.html  _game_base_8h_source.html  _game_object_8h_source.html  _input_component_8h_source.html  _interaction_manager_8h_source.html  _interfaces_8h_source.html  _mock_collider_component_8h_source.html  _mock_event_manager_8h_source.html  _mock_renderer_8h_source.html  _movable_8h_source.html  _paddle_8h_source.html  _rectangular_collider_component_manager_8h_source.html  _rectangular_geometry_8h_source.html  _rectangular_shape_8h_source.html  _rectangular_shape_component_8h_source.html  _renderer_8h_source.html  _simple_drawables_8h_source.html  _simple_ticker_8h_source.html  _transform_component_8h_source.html  _wall_8h_source.html  _window_8h_source.html  annotated.html  (+1220 more)
docs/html/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
examples/: SimpleDrawables.h
facineroso/include/: AbstractPrimitiveShape.h  BackendContextInterface.h  Box.h  Drawable.h  DrawablePrimitivesFactory.h  EventManagementInterface.h  EventManager.h  EventUtils.h  IPrimitives.h  InteractionManager.h  Interfaces.h  RectangularGeometry.h  RectangularShape.h  Renderer.h  SimpleShapes.h  Window.h  utils.h
facineroso/src/: CMakeLists.txt  EventManager.cpp  Movable.cpp  RectangularShape.cpp  Renderer.cpp  SimpleShapes.cpp  utils.cpp
include/: BackendContextInterface.h  BackendContextSDL.h  Box.h  BoxDrawablePrimitive.h  Drawable.h  Event.h  EventManagementInterface.h  EventManager.h  Events.h  InteractionManager.h  Interfaces.h  Movable.h  Paddle.h  RectangularGeometry.h  Renderer.h  RendererPrimitive.h  RendererSDL.h  Window.h  utils.h
pichon/include/: Ball.h  Component.h  Game.h  GameBase.h  GameInterfaces.h  GameLoop.h  GameObject.h  GameObjectsManager.h  Paddle.h  SimpleTicker.h  TransformComponent.h  components.h
pichon/include/components/: BoxColliderComponent.h  ColliderComponent.h  ColliderComponentManagerBase.h  ColliderTagsManager.h  ColliderValidator.h  CollisionContainer.h  Component.h  ComponentManager.h  DrawableComponent.h  IComponent.h  InputComponent.h  RectangularShapeComponent.h  TransformComponent.h
pichon/src/: Ball.cpp  CMakeLists.txt  Game.cpp  GameBase.cpp  GameLoop.cpp  GameObjectsManager.cpp  Paddle.cpp  main.cpp
pichon/src/components/: BoxColliderComponentManager.cpp  ColliderComponentManagerBase.cpp  Component.cpp  ComponentManager.cpp  DrawableComponentManager.cpp  InputComponentManager.cpp  TransformComponentManager.cpp
pong/: Ball.cpp  Ball.h  Paddle.cpp  Paddle.h  RectangularColliderComponentManager.h  Wall.h  loadGameObjects.cpp
src/: BackendContextSDL.cpp  BoxDrawablePrimitive.cpp  BoxDrawablePrimitiveSDL.cpp  EventManager.cpp  InteractionManager.cpp  Paddle.cpp  Renderer.cpp  Window.cpp
test/: CMakeLists.txt  TestBall.cpp  TestBox.cpp  TestEventManager.cpp  TestInteractionManager.cpp  TestMovable.cpp  TestPaddle.cpp  TestRectangularGeometry.cpp  TestRenderer.cpp  TestRendererSDL.cpp  TestWindow.cpp
tests/: CMakeLists.txt
tests/facineroso/: CMakeLists.txt  TestBox.cpp  TestEventManager.cpp  TestInteractionManager.cpp  TestRenderer.cpp  TestWindow.cpp
tests/pichon/: CMakeLists.txt  MockColliderComponent.h  MockEventManager.h  MockRenderer.h  TestBall.cpp  TestBoxColliderComponent.cpp  TestBoxColliderComponentManagerBase.cpp  TestColliderComponent.cpp  TestColliderComponentManager.cpp  TestColliderValidator.cpp  TestCollisonContainer.cpp  TestComponent.cpp  TestComponentManager.cpp  TestDrawableComponentManager.cpp  TestDrawableComponentManagerBase.cpp  TestGame.cpp  TestGameBase.cpp  TestGameLoop.cpp  TestGameObject.cpp  TestGameObjectsManager.cpp  TestInputComponentManager.cpp  TestInputComponentManagerBase.cpp  TestPaddle.cpp  TestSimpleColliderTagsManager.cpp  TestSimpleTimer.cpp  TestTransformComponentManager.cpp
tests/pong/: CMakeLists.txt  TestBall.cpp  TestPaddle.cpp
