cmake_minimum_required(VERSION 3.25)
project(Pong)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/modules/")
add_subdirectory(facineroso/src)
add_subdirectory(tests)
add_subdirectory(backendsdl/src)
add_executable(app main.cpp)
target_link_libraries(app PRIVATE facineroso backendsdl)
